--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="A&D Brothers - Industrial Sandblasting & Coating Experts" />
     <meta property="og:description" content="Professional sandblasting, painting, and fabrication services for marine and industrial applications. 5+ years of excellence." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="src\assets\ad-brothers-logo.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
